--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.1",
     "aws-sdk": "^2.256.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
