--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "algoliasearch": "^3.30.0",
     "async": "^2.6.1",
     "aws-sdk": "^2.256.1",
     "bcrypt-nodejs": "0.0.3",
@@ -19,6 +20,7 @@
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.2.2",
     "mongoose": "^4.13.7",
+    "mongoose-algolia": "^1.7.1",
     "mongoose-deep-populate": "^3.1.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
